DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-25-1003 aronb       Fixed a bug in PfDrawManager which was causing the
                        optimized build to go into an endless loop while running
                        a Performer application.
Aug-16-2003 patrickh    VRJConfig now depends on Tweek 0.15.
Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.
                        This involved breaking vrj-chunks.desc into individual
                        files for each configuration definition.
                        NEW VERSION: 1.1.144

[2.0 Alpha 2 released - 7.1.2003]==============================================
Jul-01-2003 aronb       NEW VERSION: 1.1.143
Jun-25-2003 patrickh    Allow the use of X11 and GLX on Mac OS X instead of
                        Carbon and the OpenGL framework.
                        NEW VERSION: 1.1.142
Jun-03-2003 aronb       Created Draw Manager-specific simulator factories.
                        NEW VERSION: 1.1.141
Apr-29-2003 patrickh    configure.in requries Autoconf 2.53 or newer.
Apr-28-2003 patrickh    Updated to Gadgeteer 0.10.0 API.
                        NEW VERSION: 1.1.140
Apr-14-2003 patrickh    Changed the return type of the member function
                        vrj::DrawSimInterface::config() to be bool.
                        NEW VERSION: 1.1.139
Apr-13-2003 patrickh    Introduced vrj::DrawSimInterfaceFactory which creates
                        vrj::DrawSimInterface instances based on configuration
                        information.
                        NEW VERSION: 1.1.138
Apr-11-2003 allenb      Refactored simulator to allow for module simulators.
                        NEW VERSION: 1.1.137
Apr-10-2003 nonchocoboy Addded vrj::GlSimInterface to help ease the creation of
                        custom simulators for OpenGL apps.
                        NEW VERSION: 1.1.136
